crates/busx/tests/snapshots/tui_pty__down_arrow_moves_selection.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---
                                                                
┌Services──────────────────────────────────────────────────────┐
│org.busx.ScrollA                       <PID>  <PROC>│
│org.busx.ScrollB                       <PID>  <PROC>│
│org.busx.ScrollC                       <PID>  <PROC>│
│org.busx.ScrollD                       <PID>  <PROC>│
└──────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · q quit · ? help
