crates/busx/tests/snapshots/tui_pty__drill_into_objects_shows_paths.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---
org.busx.Test
┌Objects───────────────────────────────────────────────────────┐
│/                                                             │
│/org                                                          │
│/org/busx                                                     │
│/org/busx/Test                                                │
│/org/busx/Test/sub                                            │
│                                                              │
│                                                              │
│                                                              │
└──────────────────────────────────────────────────────────────┘
↑↓ select · Enter open · / filter · r refresh · Esc back · q qui
