crates/busx/tests/snapshots/tui_pty__filter_narrows_service_list.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---

┌Services──────────────────────────────────────────────────────┐
│org.busx.ScrollA                        <PID>  <PROC>         │
│org.busx.ScrollB                        <PID>  <PROC>         │
│org.busx.ScrollC                        <PID>  <PROC>         │
│org.busx.ScrollD                        <PID>  <PROC>         │
│org.busx.ScrollE                        <PID>  <PROC>         │
│org.busx.ScrollF                        <PID>  <PROC>         │
│org.busx.ScrollG                        <PID>  <PROC>         │
└──────────────────────────────────────────────────────────────┘
/ scroll
↑↓ select · Enter open · / filter · r refresh · q quit · ? help
