crates/busx/tests/snapshots/tui_pty__get_property_result.snap
---
source: crates/busx/tests/tui_pty.rs
expression: screen.as_str()
---
org.busx.Test > /org/busx/Test > org.busx.Test > Result
┌org.busx.Test.volume──────────────────────────────────────────────────────────┐
│0.5                                                                           │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
↑↓ scroll · ←→ scroll · c copy-as · y copy · Esc back · q quit · ? help
