crates/busx/tests/snapshots/tui_pty__help_overlay_renders.snap
---
source: crates/busx/tests/tui_pty.rs
expression: probe.screen_contents()
---


  ┌help — Esc or ? to close──────────────────────────────────────────────────┐
  │busx — keybindings                                                        │
  │                                                                          │
  │global:                                                                   │
  │  ↑↓ / jk     move / scroll (Result)                                      │
  │  ←→ / hl     (Result) scroll sideways; `<`/`>` marks hidden text         │
  │  Enter       open / activate / drill in / fire the focused button        │
  │  Esc         back (or stop a listen); at root Service screen, quit       │
  │  q           quit                                                        │
  │  /           (list) filter — type, ↑↓ pick, Enter open, Esc clear        │
  │  Tab         (Interface) cycle methods/properties/signals                │
  │  r           refresh the current view                                    │
  │  c           copy-as — dbus-send/busctl/qdbus/gdbus for the current op   │
  │  y           (Result) copy the result text                               │
  │  ?           toggle this help                                            │
  │  mouse       click to select / click a button / wheel to scroll          │
  │                                                                          │
  │navigation: Service → Objects → Interfaces → Interface → Detail → Result  │
  │  (single-item levels auto-skip; Esc unwinds the stack)                   │
  └──────────────────────────────────────────────────────────────────────────┘
